--- a/ementor/package.json
+++ b/ementor/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "react-quill": "^1.3.2",
     "remarkable": "^1.7.1",
     "twilio-chat": "^3.1.0",
     "twilio-video": "^1.14.1"
