--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.9",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
