--- a/ementor/package.json
+++ b/ementor/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1",
     "@material-ui/core": "^3.3.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "concurrently": "^4.0.1",
     "jwt-decode": "^2.2.0",
+    "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.0",
+    "react-quill": "^1.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "react-quill": "^1.3.2",
     "remarkable": "^1.7.1",
     "twilio-chat": "^3.1.0",
     "twilio-video": "^1.14.1"
