--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "react-detect-offline": "^2.1.2",
     "react-dom": "^16.6.3",
     "react-quill": "^1.3.2",
     "react-redux": "^5.1.0",
