--- a/ementor/package.json
+++ b/ementor/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
+    "react-detect-offline": "^2.1.2",
     "react-dom": "^16.6.0",
     "react-quill": "^1.3.2",
     "react-redux": "^5.0.7",
